# obscura2.0

./: Cargo.toml
.github/workflows/: ci.yml  docs.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: block_ext.rs  config.rs  error.rs  ledger.rs  lib.rs  pow.rs
core/tests/: core_tests.rs
docs/: book.toml
docs/src/: SUMMARY.md
gui-wallet/: Cargo.toml
gui-wallet/src/: main.rs
network/: Cargo.toml
network/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
wallet/: Cargo.toml
wallet/src/: lib.rs
zk/: Cargo.toml
zk/src/: lib.rs
