[package]
name = "obscura-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
blake2 = "0.10"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "1", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
rand = "0.8"
ed25519-dalek = "1"
rand_core = "0.6"
