[package]
name = "obscura-gui-wallet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "obscura-gui-wallet"
path = "src/main.rs"

autobins = false

[dependencies]
egui = "0.27"
eframe = "0.27"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
